# Linera-Game-Station

./: .dockerignore  .env.example  .gitignore  DEMO_VIDEO_SCRIPT.md  Dockerfile  MICROCHAIN_ARCHITECTURE.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  run.bash  tailwind.config.ts  vercel.json  vite.config.ts
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/game-station/: Cargo.toml
contracts/game-station/src/: contract.rs  contract.rs.backup  contract_PRODUCTION_backup.rs  lib.rs  lib_OLD.rs  lib_backup.txt  room_contract.rs  service.rs  state.rs
src/: App.tsx  index.css
src/components/blockchain/: BlockchainActivityIndicator.tsx
src/components/effects/: GlowOrb.tsx  ParticleBackground.tsx  ParticleEffect.tsx
src/components/games/: GameCard.tsx  SnakeGame.tsx  SnakeLaddersGame.tsx  TicTacToeGame.tsx  UnoGame.tsx
src/components/layout/: Navbar.tsx
src/components/multiplayer/: MultiplayerLobby.tsx  QuickMatch.tsx  README.md  index.ts
src/components/social/: ChallengeNotification.tsx  ChatPanel.tsx  FriendsList.tsx  SpectatorView.tsx  index.ts
src/components/tournament/: TournamentBracket.tsx  TournamentLobby.tsx  index.ts
src/components/ui/: button.tsx  card.tsx
src/contexts/: LineraProvider.tsx
src/hooks/: useDynamicLineraWallet.ts  useGlobalStats.ts  useLineraClient.ts  useSoundEffects.ts
src/lib/game-ai/: index.ts
src/lib/linera/: client.ts  (+5 more)
src/pages/: GamePage.tsx  LandingPage.tsx  LeaderboardPage.tsx  LobbyPage.tsx  NotFound.tsx  ProfilePage.tsx  SocialPage.tsx  TournamentsPage.tsx
