[package]
name = "game-station"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
async-graphql.workspace = true
futures.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "game_station_contract"
path = "src/contract.rs"

[[bin]]
name = "game_station_service"
path = "src/service.rs"

# Phase 2: Room microchain contract (uses same service binary)
[[bin]]
name = "game_room_contract"
path = "src/room_contract.rs"
